--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
       {
         term: "Karbonavtrykk",
         definition: "Karbonavtrykk er mengden CO₂-utslipp forårsaket av en aktivitet, person eller produkt. Det kan reduseres ved å bruke fornybar energi og spise klimavennlig."
-      }
+      },
+      {term: "pH-verdi",
+        definition: "pH-verdi måler hvor sur eller basisk en løsning er."
+      },
     ];
 
     let currentCardIndex = 0;
