--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcards with Flip and Pop-Up</title>
+    <title>Flashcards Navigator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,14 +18,16 @@
 
         .card-container {
             display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 200px;
+            position: relative;
         }
 
         .card {
-            width: 150px;
-            height: 100px;
+            width: 300px;
+            height: 200px;
             perspective: 1000px;
             cursor: pointer;
         }
@@ -65,6 +67,29 @@
             background-color: #f4f4f9;
             color: #333;
             transform: rotateY(180deg);
+            padding: 10px;
+            text-align: center;
+        }
+
+        .navigation-buttons {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .navigation-buttons button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+
+        .navigation-buttons button:hover {
+            background-color: #0056b3;
         }
 
         .pop-up-image {
@@ -74,7 +99,7 @@
             transform: translate(-50%, -50%) scale(0);
             width: 200px;
             height: 200px;
-            background-image: url('bilde1.png'); /* Reference the local file */
+            background-image: url('bilde.png'); /* Reference the local file */
             background-size: cover;
             background-position: center;
             border-radius: 50%;
@@ -89,43 +114,73 @@
     </style>
 </head>
 <body>
-    <div class="card-container">
-        <div class="card" onclick="handleCardClick(this)">
-            <div class="card-inner">
-                <div class="card-front">Hva er pH-verdi?</div>
-                <div class="card-back">pH-verdi er et mål på surhet eller basiskhet i en løsning.</div>
-            </div>
-        </div>
-        <div class="card" onclick="handleCardClick(this)">
-            <div class="card-inner">
-                <div class="card-front">Hva er drivhuseffekten?</div>
-                <div class="card-back">Drivhuseffekten holder på varmen i jordens atmosfære ved hjelp av klimagasser.</div>
-            </div>
-        </div>
-        <div class="card" onclick="handleCardClick(this)">
-            <div class="card-inner">
-                <div class="card-front">Hva er karbonavtrykk?</div>
-                <div class="card-back">Karbonavtrykk er mengden CO₂-utslipp en person eller aktivitet forårsaker.</div>
-            </div>
-        </div>
+    <div class="card-container" id="cardContainer">
+        <!-- Card content will be dynamically loaded here -->
+    </div>
+
+    <div class="navigation-buttons">
+        <button onclick="prevCard()">Forrige</button>
+        <button onclick="nextCard()">Neste</button>
     </div>
 
     <div class="pop-up-image" id="popUpImage"></div>
 
     <script>
+        const cardsData = [
+            { front: "Hva er pH-verdi?", back: "pH-verdi er et mål på surhet eller basiskhet i en løsning." },
+            { front: "Hva er drivhuseffekten?", back: "Drivhuseffekten holder på varmen i jordens atmosfære ved hjelp av klimagasser." },
+            { front: "Hva er karbonavtrykk?", back: "Karbonavtrykk er mengden CO₂-utslipp en person eller aktivitet forårsaker." },
+            { front: "Hva er global oppvarming?", back: "Global oppvarming er en økning i jordens gjennomsnittstemperatur grunnet menneskelige aktiviteter." },
+            { front: "Hva er permafrost?", back: "Permafrost er bakken som forblir frossen hele året, ofte funnet i polare områder." },
+            { front: "Hva er klimaendringer?", back: "Klimaendringer refererer til langvarige endringer i værmønstre og gjennomsnittstemperaturer." }
+        ];
+
+        let currentCardIndex = 0;
+
+        const cardContainer = document.getElementById('cardContainer');
+        const popUpImage = document.getElementById('popUpImage');
+
+        function loadCard(index) {
+            const cardData = cardsData[index];
+            cardContainer.innerHTML = `
+                <div class="card" onclick="handleCardClick(this)">
+                    <div class="card-inner">
+                        <div class="card-front">${cardData.front}</div>
+                        <div class="card-back">${cardData.back}</div>
+                    </div>
+                </div>
+            `;
+        }
+
         function handleCardClick(card) {
-            // Snu kortet
+            // Flip the card
             card.classList.toggle('flipped');
 
-            // Vis pop-up bilde
-            const popUp = document.getElementById('popUpImage');
-            popUp.classList.add('active');
+            // Show the pop-up image
+            popUpImage.classList.add('active');
 
-            // Fjern pop-up etter 600ms
+            // Hide the pop-up image after 600ms
             setTimeout(() => {
-                popUp.classList.remove('active');
+                popUpImage.classList.remove('active');
             }, 600);
         }
+
+        function nextCard() {
+            if (currentCardIndex < cardsData.length - 1) {
+                currentCardIndex++;
+                loadCard(currentCardIndex);
+            }
+        }
+
+        function prevCard() {
+            if (currentCardIndex > 0) {
+                currentCardIndex--;
+                loadCard(currentCardIndex);
+            }
+        }
+
+        // Load the first card initially
+        loadCard(currentCardIndex);
     </script>
 </body>
 </html>
