--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             transform: translate(-50%, -50%) scale(0);
             width: 200px;
             height: 200px;
-            background-image: url('bilde.png'); /* Reference the local file */
+            background-image: url('bilde1.png'); /* Reference the local file */
             background-size: cover;
             background-position: center;
             border-radius: 50%;
